--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 asgiref==3.7.2
 Django==3.0.9
+numpy==1.26.0
+pandas==2.1.1
+python-dateutil==2.8.2
 pytz==2023.3.post1
+six==1.16.0
 sqlparse==0.4.4
+tzdata==2023.3
+XlsxWriter==3.1.5
